Advanced Safe - AVR Project

--- a/Advanced Safe/Release/makefile
+++ b/Advanced Safe/Release/makefile
@@ -39,20 +39,20 @@ $(wildcard ../makefile.init) \
 $(wildcard ../makefile.targets) \
 
 
-BUILD_ARTIFACT_NAME := The_Safe
+BUILD_ARTIFACT_NAME := Advanced_Safe
 BUILD_ARTIFACT_EXTENSION := elf
 BUILD_ARTIFACT_PREFIX :=
 BUILD_ARTIFACT := $(BUILD_ARTIFACT_PREFIX)$(BUILD_ARTIFACT_NAME)$(if $(BUILD_ARTIFACT_EXTENSION),.$(BUILD_ARTIFACT_EXTENSION),)
 
 # Add inputs and outputs from these tool invocations to the build variables 
 LSS += \
-The_Safe.lss \
+Advanced_Safe.lss \
 
 FLASH_IMAGE += \
-The_Safe.hex \
+Advanced_Safe.hex \
 
 EEPROM_IMAGE += \
-The_Safe.eep \
+Advanced_Safe.eep \
 
 SIZEDUMMY += \
 sizedummy \
@@ -62,43 +62,43 @@ sizedummy \
 all: main-build
 
 # Main-build Target
-main-build: The_Safe.elf secondary-outputs
+main-build: Advanced_Safe.elf secondary-outputs
 
 # Tool invocations
-The_Safe.elf: $(OBJS) $(USER_OBJS) makefile objects.mk $(OPTIONAL_TOOL_DEPS)
+Advanced_Safe.elf: $(OBJS) $(USER_OBJS) makefile objects.mk $(OPTIONAL_TOOL_DEPS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: AVR C Linker'
-	avr-gcc -Wl,-Map,The_Safe.map -mmcu=atmega32 -o "The_Safe.elf" $(OBJS) $(USER_OBJS) $(LIBS)
+	avr-gcc -Wl,-Map,Advanced_Safe.map -mmcu=atmega32 -o "Advanced_Safe.elf" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
-The_Safe.lss: The_Safe.elf makefile objects.mk $(OPTIONAL_TOOL_DEPS)
+Advanced_Safe.lss: Advanced_Safe.elf makefile objects.mk $(OPTIONAL_TOOL_DEPS)
 	@echo 'Invoking: AVR Create Extended Listing'
-	-avr-objdump -h -S The_Safe.elf  >"The_Safe.lss"
+	-avr-objdump -h -S Advanced_Safe.elf  >"Advanced_Safe.lss"
 	@echo 'Finished building: $@'
 	@echo ' '
 
-The_Safe.hex: The_Safe.elf makefile objects.mk $(OPTIONAL_TOOL_DEPS)
+Advanced_Safe.hex: Advanced_Safe.elf makefile objects.mk $(OPTIONAL_TOOL_DEPS)
 	@echo 'Create Flash image (ihex format)'
-	-avr-objcopy -R .eeprom -R .fuse -R .lock -R .signature -O ihex The_Safe.elf  "The_Safe.hex"
+	-avr-objcopy -R .eeprom -R .fuse -R .lock -R .signature -O ihex Advanced_Safe.elf  "Advanced_Safe.hex"
 	@echo 'Finished building: $@'
 	@echo ' '
 
-The_Safe.eep: The_Safe.elf makefile objects.mk $(OPTIONAL_TOOL_DEPS)
+Advanced_Safe.eep: Advanced_Safe.elf makefile objects.mk $(OPTIONAL_TOOL_DEPS)
 	@echo 'Create eeprom image (ihex format)'
-	-avr-objcopy -j .eeprom --no-change-warnings --change-section-lma .eeprom=0 -O ihex The_Safe.elf  "The_Safe.eep"
+	-avr-objcopy -j .eeprom --no-change-warnings --change-section-lma .eeprom=0 -O ihex Advanced_Safe.elf  "Advanced_Safe.eep"
 	@echo 'Finished building: $@'
 	@echo ' '
 
-sizedummy: The_Safe.elf makefile objects.mk $(OPTIONAL_TOOL_DEPS)
+sizedummy: Advanced_Safe.elf makefile objects.mk $(OPTIONAL_TOOL_DEPS)
 	@echo 'Invoking: Print Size'
-	-avr-size --format=avr --mcu=atmega32 The_Safe.elf
+	-avr-size --format=avr --mcu=atmega32 Advanced_Safe.elf
 	@echo 'Finished building: $@'
 	@echo ' '
 
 # Other Targets
 clean:
-	-$(RM) $(FLASH_IMAGE)$(ELFS)$(OBJS)$(ASM_DEPS)$(EEPROM_IMAGE)$(S_DEPS)$(SIZEDUMMY)$(S_UPPER_DEPS)$(LSS)$(C_DEPS) The_Safe.elf
+	-$(RM) $(FLASH_IMAGE)$(ELFS)$(OBJS)$(ASM_DEPS)$(EEPROM_IMAGE)$(S_DEPS)$(SIZEDUMMY)$(S_UPPER_DEPS)$(LSS)$(C_DEPS) Advanced_Safe.elf
 	-@echo ' '
 
 secondary-outputs: $(LSS) $(FLASH_IMAGE) $(EEPROM_IMAGE) $(SIZEDUMMY)
