Update Security Files

--- a/Advanced Safe/.project
+++ b/Advanced Safe/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Advanced_Safe</name>
+	<name>Bank_DataBase</name>
 	<comment></comment>
 	<projects>
 	</projects>
