--- a/Bank_DataBase/.project
+++ b/Bank_DataBase/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Barking_Sys</name>
+	<name>Bank_System</name>
 	<comment></comment>
 	<projects>
 	</projects>
